hphp/hack/test/typecheck/inout/shapes_remove_key1.php.exp
File "shapes_remove_key1.php", line 8, characters 6-8:
The field x is undefined (Typing[4108])
File "shapes_remove_key1.php", line 6, characters 3-34:
Definition is here
